--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -78,14 +78,15 @@
         </mfp:windows10>
         <mfp:appChecksum>0</mfp:appChecksum>
     </mfp:windows>
-    <mfp:platformVersion>8.0.0.00-20200322-152731</mfp:platformVersion>
+    <mfp:platformVersion>8.0.0.00-20220920-051950</mfp:platformVersion>
     <mfp:clientCustomInit enabled="false" />
     <access origin="https://mpradip.ntpc.co.in/*" />
-    <mfp:server runtime="mfp" url="http://10.3.0.134" />
+    <mfp:server runtime="mfp" url="https://mpradip.ntpc.co.in" />
     <mfp:directUpdateAuthenticityPublicKey />
     <mfp:languagePreferences>en</mfp:languagePreferences>
     <mfp:APIproxyURL>/adapters/MobileAPIProxy</mfp:APIproxyURL>
     <mfp:serverUri url="" />
+    <mfp:SDKProtocolVersion>2</mfp:SDKProtocolVersion>
     <edit-config file="app/src/main/AndroidManifest.xml" mode="merge" target="/manifest/application" xmlns:android="http://schemas.android.com/apk/res/android">
         <application android:networkSecurityConfig="@xml/network_security_config" />
     </edit-config>
